--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 
 <body>
   <h1> Brian Fischer </h1>
-  <br>
-  <img src="espn.png">
-  <br>
+  <img src="gbu.jpg">
   <p>Text Placeholder</p>
   <p>Text Placeholder</p>
-  <br>
   <ul>
     <li><strong>Email:</strong> <a href="#">coming soon</a></li>
     <li><strong>LinkedIn:</strong> <a href="#">coming soon</a></li>
