--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
   <table>
     <tr>
       <th>Movies</th>
-      <th>Teams</th>
+      <th>Favorite Sports</th>
       <th>Hobbies</th>
     </tr>
     <tr>
-      <td>Unforgiven</td>
-      <td>Chicago Bears</td>
+      <td>Il Buono, Il Brutto, Il Cattivo</td>
+      <td>Soccer</td>
       <td>Golf</td>
     </tr>
     <tr>
       <td>Goodfellas</td>
-      <td>Calgary Flames</td>
+      <td>Hockey</td>
       <td>Poker</td>
     </tr>
     <tr>
-      <td>Il Buono, Il Brutto, Il Cattivo</td>
-      <td>Oakland Athletics</td>
+      <td>Crouching Tiger, Hidden Dragon</td>
+      <td>Golf</td>
       <td>Flying</td>
   </tr>
   </table>
