--- a/latitude/comparison.html
+++ b/latitude/comparison.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Latitude Home</title>
+    <title>Comparison</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -34,41 +34,32 @@
         </div>
     </nav>
     <br><br>
-    <div class="col-lg-7">
+    <div class="col-lg-12">
         <div class="jumbotron">
-            <h1>Summary: Latitude vs X</h1>
+            <h1>Comparison: Latitude vs X</h1>
             <hr>
-            <p>The purpose of this project was to analyze how weather changes as one gets closer to the equator.
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset
-                on over 500 cities.<br><br>After assembling the dataset, we used Matplotlib to plot various aspects
-                of the weather versus latitude. Factors we considered included temperature, cloudiness, wind speed,
-                and humidity. This site provides the source data and visualizations created as part of the analysis,
-                as well as explanations and descriptions of any trends and correlations witnessed.
-            </p>
-        </div>
-    </div>
-    <div class="col-lg-5">
-        <div class="jumbotron">
-            <h2 align="center">Visualizations</h2>
-            <hr>
-            <table>
-                <tr>
-                    <td style="text-align: right;">
+            <p>Click any plot to get an in-depth analysis</p>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
                         <a href="vis-temp.html"><img src="img-temp.png" width="100%"></a>
-                    </td>
-                    <td style="text-align: left;">
+                    </div>
+                    <div class="col-md-6">
                         <a href="vis-humid.html"><img src="img-humid.png" width="100%"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="text-align: right;">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
                         <a href="vis-cloud.html"><img src="img-cloud.png" width="100%"></a>
-                    </td>
-                    <td style="text-align: left;">
+                    </div>
+                    <div class="col-md-6">
                         <a href="vis-wind.html"><img src="img-wind.png" width="100%"></a>
-                    </td>
-                </tr>
-            </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
