--- a/latitude/vis-cloud.html
+++ b/latitude/vis-cloud.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Latitude Home</title>
+    <title>Cloudiness Visualization</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -36,14 +36,14 @@
     <br><br>
     <div class="col-lg-7">
         <div class="jumbotron">
-            <h1>Summary: Latitude vs X</h1>
+            <h1>Cloudiness</h1>
             <hr>
-            <p>The purpose of this project was to analyze how weather changes as one gets closer to the equator.
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset
-                on over 500 cities.<br><br>After assembling the dataset, we used Matplotlib to plot various aspects
-                of the weather versus latitude. Factors we considered included temperature, cloudiness, wind speed,
-                and humidity. This site provides the source data and visualizations created as part of the analysis,
-                as well as explanations and descriptions of any trends and correlations witnessed.
+            <img src="img-cloud.png" width="100%">
+            <br><br>
+            <p>Intuitively, one would not expect cloudiness to correlate highly with latitude. 
+                And judging by the plot, this would seem to be a fairly accurate observation.
+                But we must remember that this dataset is taken from a single day, and that
+                cloudiness can be very seasonal.
             </p>
         </div>
     </div>
