--- a/latitude/vis-temp.html
+++ b/latitude/vis-temp.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Latitude Home</title>
+    <title>Temperature Visualization</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -36,14 +36,14 @@
     <br><br>
     <div class="col-lg-7">
         <div class="jumbotron">
-            <h1>Summary: Latitude vs X</h1>
+            <h1>Max Temperature</h1>
             <hr>
-            <p>The purpose of this project was to analyze how weather changes as one gets closer to the equator.
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset
-                on over 500 cities.<br><br>After assembling the dataset, we used Matplotlib to plot various aspects
-                of the weather versus latitude. Factors we considered included temperature, cloudiness, wind speed,
-                and humidity. This site provides the source data and visualizations created as part of the analysis,
-                as well as explanations and descriptions of any trends and correlations witnessed.
+            <img src="img-temp.png" width="100%">
+            <br><br>
+            <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 degrees latitude).
+                More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year
+                than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data
+                was gathered.
             </p>
         </div>
     </div>
