--- a/latitude/vis-wind.html
+++ b/latitude/vis-wind.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Latitude Home</title>
+    <title>Wind Speed Visualization</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -36,14 +36,15 @@
     <br><br>
     <div class="col-lg-7">
         <div class="jumbotron">
-            <h1>Summary: Latitude vs X</h1>
+            <h1>Wind Speed</h1>
             <hr>
-            <p>The purpose of this project was to analyze how weather changes as one gets closer to the equator.
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset
-                on over 500 cities.<br><br>After assembling the dataset, we used Matplotlib to plot various aspects
-                of the weather versus latitude. Factors we considered included temperature, cloudiness, wind speed,
-                and humidity. This site provides the source data and visualizations created as part of the analysis,
-                as well as explanations and descriptions of any trends and correlations witnessed.
+            <img src="img-wind.png" width="100%">
+            <br><br>
+            <p>When examining this plot, it is helpful to consider the five major wind zones and where
+                they exist: polar easterlies (poles north and south), westerlies (mid-latitudes), 
+                horse latitudes (between 30 and 35 degrees north and south), trade winds (tropics),
+                and the doldrums (near the equator).
+
             </p>
         </div>
     </div>
